--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,8 @@ html {
   margin-top: 100px;
 }
 .places input,
-.gps {
+.gps,
+.reset {
   background: white;
   border-style: none;
   padding: 15px;
@@ -27,6 +28,10 @@ html {
   font-size: 1em;
   border-radius: 15px 0;
   box-shadow: 2px 2px 4px black;
+}
+.reset {
+  background-color: rgba(175, 40, 40, 0.377);
+  color: white;
 }
 
 .container {
@@ -52,4 +57,8 @@ html {
   width: 400px;
   margin: 70px;
   border-radius: 20px 0;
+}
+#polyline-measure-control {
+  font-size: 2em;
+  text-shadow: 1px 1px 2px black;
 }
