--- a/styles.css
+++ b/styles.css
@@ -14,24 +14,28 @@ html {
   height: 100vh;
   font-family: "Poppins", sans-serif;
 }
-.modal-shell {
+/* .modal-shell {
   position: fixed;
   height: 100%;
   width: 100%;
-  z-index: 0;
+  z-index: 10;
   display: flex;
-  /* justify-content: center; */
-  align-items: center;
-}
-.modal {
-  margin-left: 60vh;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: blanchedalmond;
-  height: 50vh;
-  width: 50vh;
+} */
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px; /* Negative half of height. */
+  margin-left: -150px; /* Negative half of width. */
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: honeydew;
+  height: 300px;
+  width: 300px;
   border-radius: 30px 0;
   text-align: left;
   box-shadow: 0 0 0 10000px rgba(0, 0, 0, 0.699);
@@ -60,6 +64,7 @@ html {
 .manual-save:hover {
   background: greenyellow;
 }
+
 .hidden {
   display: none;
 }
@@ -73,11 +78,13 @@ html {
 .places {
   z-index: 1000;
   position: fixed;
-  left: 45vw;
+  right: 0;
 }
 .places input,
 .reset,
-.add-manual {
+.add-manual,
+.clear,
+.delete {
   background: white;
   border-style: none;
   padding: 15px;
@@ -93,20 +100,22 @@ html {
 .add-manual:hover {
   background: rgb(37, 61, 0);
 }
-.reset {
+.reset,
+.clear,
+.delete {
   background-color: rgba(175, 40, 40, 0.377);
   color: white;
 }
-.reset:hover {
+.reset:hover,
+.clear:hover,
+.delete:hover {
   background: rgb(54, 3, 3);
 }
 .workout-list {
-  z-index: 100;
   position: fixed;
   left: 0;
   height: 100vh;
   width: 300px;
-  background-color: blanchedalmond;
   padding: 20px;
   overflow: overlay;
   list-style: none;
@@ -136,6 +145,7 @@ html {
   font-size: 4em;
 }
 #map {
+  z-index: 1;
   height: 400px;
   width: 400px;
   margin: 70px;
